--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     5 km
                 </td>
                 <td class="px-6 py-4 text-right">
-                    <a href="./pages/day1.html" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Detail</a>
+                    <a href="/pages/day1.html" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Detail</a>
                 </td>
             </tr>
             <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600">
