does this fix it?

--- a/index.html
+++ b/index.html
@@ -1,178 +1,197 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/src/style.css" rel="stylesheet">
-    <title>KAPESNIKOVA CESTA</title>
-  </head>
-  <body>
-    <div>
-      <h1 class="text-3xl font-bold uppercase text-center my-8">kapesnikova cesta</h1>
-      <div class="flex justify-center w-full mb-5">
-      <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-5xl">
-    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-            <tr>
-                <th scope="col" class="px-6 py-3">
-                    Den
-                </th>
-                <th scope="col" class="px-6 py-3">
-                    Stream včas?
-                </th>
-                <th scope="col" class="px-6 py-3">
-                    Start
-                </th>
-                <th scope="col" class="px-6 py-3">
-                    Konec
-                </th>
-                <th scope="col" class="px-6 py-3">
-                    Počet km
-                </th>
-                <th scope="col" class="px-6 py-3">
-                    <span class="sr-only">Edit</span>
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600">
-                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                    Den 1
-                </th>
-                <td class="px-6 py-4">
-                  ❌
-                </td>
-                <td class="px-6 py-4 text-white">
-                    Nevim
-                </td>
-                <td class="px-6 py-4 text-white">
-                    Nevim
-                </td>
-                <td class="px-6 py-4 text-white">
-                    5 km
-                </td>
-                <td class="px-6 py-4 text-right">
-                    <a href="./pages/day1.html" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Detail</a>
-                </td>
-            </tr>
-            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600">
-                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                    Den 2
-                </th>
-                <td class="px-6 py-4">
-                    ❌
-                </td>
-                <td class="px-6 py-4 text-white">
-                    Nevim
-                </td>
-                <td class="px-6 py-4 text-white">
-                    Nevim
-                </td>
-                <td class="px-6 py-4 text-white">
-                    6 km
-                </td>
-                <td class="px-6 py-4 text-right">
-                    <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Detail</a>
-                </td>
-            </tr>
-            <tr class="bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-600">
-                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                    Den 3
-                </th>
-                <td class="px-6 py-4">
-                    ❌
-                </td>
-                <td class="px-6 py-4 text-white">
-                    Nevim
-                </td>
-                <td class="px-6 py-4 text-white">
-                    Nevim
-                </td>
-                <td class="px-6 py-4 text-white">
-                    7 km
-                </td>
-                <td class="px-6 py-4 text-right">
-                    <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Detail</a>
-                </td>
-            </tr>
-            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600">
-                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                    Den 4
-                </th>
-                <td class="px-6 py-4">
-                  ❌
-                </td>
-                <td class="px-6 py-4 text-white">
-                    Nevim
-                </td>
-                <td class="px-6 py-4 text-white">
-                    Nevim
-                </td>
-                <td class="px-6 py-4 text-white">
-                    5 km
-                </td>
-                <td class="px-6 py-4 text-right">
-                    <a href="./pages/day1.html" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Detail</a>
-                </td>
-            </tr>
-            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600">
-                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                    Den 5
-                </th>
-                <td class="px-6 py-4">
-                  ❌
-                </td>
-                <td class="px-6 py-4 text-white">
-                    Nevim
-                </td>
-                <td class="px-6 py-4 text-white">
-                    Nevim
-                </td>
-                <td class="px-6 py-4 text-white">
-                    5 km
-                </td>
-                <td class="px-6 py-4 text-right">
-                    <a href="/pages/day1.html" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Detail</a>
-                </td>
-            </tr>
-            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600">
-                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                    Den 6
-                </th>
-                <td class="px-6 py-4">
-                  ❌
-                </td>
-                <td class="px-6 py-4 text-white">
-                    Nevim
-                </td>
-                <td class="px-6 py-4 text-white">
-                    Nevim
-                </td>
-                <td class="px-6 py-4 text-white">
-                    5 km
-                </td>
-                <td class="px-6 py-4 text-right">
-                    <a href="./pages/day1.html" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Detail</a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-</div>
-<div class="flex justify-center w-full gap-4">
-  <div>
-    <a href="https://www.twitch.tv/kapesnik69" target="_blank">
-    <button type="button" class="cursor-pointer focus:outline-none text-white bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-900">Twitch</button>
-    </a>
-  </div>
-  <div>
-    <a href="https://www.youtube.com/channel/UCrXzHh1wiJ7Nt3OF9H_knTA" target="_blank">
-    <button type="button" class="cursor-pointer text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">Youtube</button>
-    </a>
-  </div>
-</div>
-    </div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="./src/style.css" rel="stylesheet" />
+        <title>KAPESNIKOVA CESTA</title>
+    </head>
+    <body>
+        <div>
+            <h1 class="text-3xl font-bold uppercase text-center my-8">
+                kapesnikova cesta
+            </h1>
+            <div class="flex justify-center w-full mb-5">
+                <div
+                    class="relative overflow-x-auto shadow-md sm:rounded-lg w-5xl"
+                >
+                    <table
+                        class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
+                    >
+                        <thead
+                            class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
+                        >
+                            <tr>
+                                <th scope="col" class="px-6 py-3">Den</th>
+                                <th scope="col" class="px-6 py-3">
+                                    Stream včas?
+                                </th>
+                                <th scope="col" class="px-6 py-3">Start</th>
+                                <th scope="col" class="px-6 py-3">Konec</th>
+                                <th scope="col" class="px-6 py-3">Počet km</th>
+                                <th scope="col" class="px-6 py-3">
+                                    <span class="sr-only">Edit</span>
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr
+                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+                            >
+                                <th
+                                    scope="row"
+                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                                >
+                                    Den 1
+                                </th>
+                                <td class="px-6 py-4">❌</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">5 km</td>
+                                <td class="px-6 py-4 text-right">
+                                    <a
+                                        href="/pages/day1.html"
+                                        class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
+                                        >Detail</a
+                                    >
+                                </td>
+                            </tr>
+                            <tr
+                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+                            >
+                                <th
+                                    scope="row"
+                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                                >
+                                    Den 2
+                                </th>
+                                <td class="px-6 py-4">❌</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">6 km</td>
+                                <td class="px-6 py-4 text-right">
+                                    <a
+                                        href="#"
+                                        class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
+                                        >Detail</a
+                                    >
+                                </td>
+                            </tr>
+                            <tr
+                                class="bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-600"
+                            >
+                                <th
+                                    scope="row"
+                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                                >
+                                    Den 3
+                                </th>
+                                <td class="px-6 py-4">❌</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">7 km</td>
+                                <td class="px-6 py-4 text-right">
+                                    <a
+                                        href="#"
+                                        class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
+                                        >Detail</a
+                                    >
+                                </td>
+                            </tr>
+                            <tr
+                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+                            >
+                                <th
+                                    scope="row"
+                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                                >
+                                    Den 4
+                                </th>
+                                <td class="px-6 py-4">❌</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">5 km</td>
+                                <td class="px-6 py-4 text-right">
+                                    <a
+                                        href="/pages/day1.html"
+                                        class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
+                                        >Detail</a
+                                    >
+                                </td>
+                            </tr>
+                            <tr
+                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+                            >
+                                <th
+                                    scope="row"
+                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                                >
+                                    Den 5
+                                </th>
+                                <td class="px-6 py-4">❌</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">5 km</td>
+                                <td class="px-6 py-4 text-right">
+                                    <a
+                                        href="/pages/day1.html"
+                                        class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
+                                        >Detail</a
+                                    >
+                                </td>
+                            </tr>
+                            <tr
+                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+                            >
+                                <th
+                                    scope="row"
+                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                                >
+                                    Den 6
+                                </th>
+                                <td class="px-6 py-4">❌</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">5 km</td>
+                                <td class="px-6 py-4 text-right">
+                                    <a
+                                        href="/pages/day1.html"
+                                        class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
+                                        >Detail</a
+                                    >
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="flex justify-center w-full gap-4">
+                <div>
+                    <a href="https://www.twitch.tv/kapesnik69" target="_blank">
+                        <button
+                            type="button"
+                            class="cursor-pointer focus:outline-none text-white bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-900"
+                        >
+                            Twitch
+                        </button>
+                    </a>
+                </div>
+                <div>
+                    <a
+                        href="https://www.youtube.com/channel/UCrXzHh1wiJ7Nt3OF9H_knTA"
+                        target="_blank"
+                    >
+                        <button
+                            type="button"
+                            class="cursor-pointer text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2"
+                        >
+                            Youtube
+                        </button>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <script type="module" src="/src/main.js"></script>
+    </body>
 </html>
