--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 <td class="px-6 py-4 text-white">5 km</td>
                                 <td class="px-6 py-4 text-right">
                                     <a
-                                        href="/pages/day1.html"
+                                        href="dayone.html"
                                         class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
                                         >Detail</a
                                     >
@@ -114,7 +114,7 @@
                                 <td class="px-6 py-4 text-white">5 km</td>
                                 <td class="px-6 py-4 text-right">
                                     <a
-                                        href="/pages/day1.html"
+                                        href="dayone.html"
                                         class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
                                         >Detail</a
                                     >
@@ -135,7 +135,7 @@
                                 <td class="px-6 py-4 text-white">5 km</td>
                                 <td class="px-6 py-4 text-right">
                                     <a
-                                        href="/pages/day1.html"
+                                        href="dayone.html"
                                         class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
                                         >Detail</a
                                     >
@@ -156,7 +156,7 @@
                                 <td class="px-6 py-4 text-white">5 km</td>
                                 <td class="px-6 py-4 text-right">
                                     <a
-                                        href="/pages/day1.html"
+                                        href="dayone.html"
                                         class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
                                         >Detail</a
                                     >
@@ -192,6 +192,6 @@
                 </div>
             </div>
         </div>
-        <script type="module" src="/src/main.js"></script>
+        <script type="module" src="./src/main.js"></script>
     </body>
 </html>
