table and layout changes

--- a/index.html
+++ b/index.html
@@ -2,171 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/svg+xml" href="/kapesnik.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="./src/style.css" rel="stylesheet" />
         <title>KAPESNIKOVA CESTA</title>
     </head>
     <body>
         <div>
-            <h1 class="text-3xl font-bold uppercase text-center my-8">
-                kapesnikova cesta
-            </h1>
-            <div class="flex justify-center w-full mb-5">
-                <div
-                    class="relative overflow-x-auto shadow-md sm:rounded-lg w-5xl"
-                >
-                    <table
-                        class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
-                    >
-                        <thead
-                            class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
-                        >
-                            <tr>
-                                <th scope="col" class="px-6 py-3">Den</th>
-                                <th scope="col" class="px-6 py-3">
-                                    Stream včas?
-                                </th>
-                                <th scope="col" class="px-6 py-3">Start</th>
-                                <th scope="col" class="px-6 py-3">Konec</th>
-                                <th scope="col" class="px-6 py-3">Počet km</th>
-                                <th scope="col" class="px-6 py-3">
-                                    <span class="sr-only">Edit</span>
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr
-                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
-                            >
-                                <th
-                                    scope="row"
-                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
-                                >
-                                    Den 1
-                                </th>
-                                <td class="px-6 py-4">❌</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
-                                <td class="px-6 py-4 text-white">5 km</td>
-                                <td class="px-6 py-4 text-right">
-                                    <a
-                                        href="dayone.html"
-                                        class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                                        >Detail</a
-                                    >
-                                </td>
-                            </tr>
-                            <tr
-                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
-                            >
-                                <th
-                                    scope="row"
-                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
-                                >
-                                    Den 2
-                                </th>
-                                <td class="px-6 py-4">❌</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
-                                <td class="px-6 py-4 text-white">6 km</td>
-                                <td class="px-6 py-4 text-right">
-                                    <a
-                                        href="#"
-                                        class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                                        >Detail</a
-                                    >
-                                </td>
-                            </tr>
-                            <tr
-                                class="bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-600"
-                            >
-                                <th
-                                    scope="row"
-                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
-                                >
-                                    Den 3
-                                </th>
-                                <td class="px-6 py-4">❌</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
-                                <td class="px-6 py-4 text-white">7 km</td>
-                                <td class="px-6 py-4 text-right">
-                                    <a
-                                        href="#"
-                                        class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                                        >Detail</a
-                                    >
-                                </td>
-                            </tr>
-                            <tr
-                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
-                            >
-                                <th
-                                    scope="row"
-                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
-                                >
-                                    Den 4
-                                </th>
-                                <td class="px-6 py-4">❌</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
-                                <td class="px-6 py-4 text-white">5 km</td>
-                                <td class="px-6 py-4 text-right">
-                                    <a
-                                        href="dayone.html"
-                                        class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                                        >Detail</a
-                                    >
-                                </td>
-                            </tr>
-                            <tr
-                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
-                            >
-                                <th
-                                    scope="row"
-                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
-                                >
-                                    Den 5
-                                </th>
-                                <td class="px-6 py-4">❌</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
-                                <td class="px-6 py-4 text-white">5 km</td>
-                                <td class="px-6 py-4 text-right">
-                                    <a
-                                        href="dayone.html"
-                                        class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                                        >Detail</a
-                                    >
-                                </td>
-                            </tr>
-                            <tr
-                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
-                            >
-                                <th
-                                    scope="row"
-                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
-                                >
-                                    Den 6
-                                </th>
-                                <td class="px-6 py-4">❌</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
-                                <td class="px-6 py-4 text-white">5 km</td>
-                                <td class="px-6 py-4 text-right">
-                                    <a
-                                        href="dayone.html"
-                                        class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                                        >Detail</a
-                                    >
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="flex justify-center w-full gap-4">
+            <div class="flex w-full justify-between items-center my-8 mx-4">
+                <h1 class="text-3xl font-bold uppercase text-center">
+                    kapesnikova cesta
+                </h1>
                 <div>
                     <a href="https://www.twitch.tv/kapesnik69" target="_blank">
                         <button
@@ -176,8 +22,6 @@
                             Twitch
                         </button>
                     </a>
-                </div>
-                <div>
                     <a
                         href="https://www.youtube.com/channel/UCrXzHh1wiJ7Nt3OF9H_knTA"
                         target="_blank"
@@ -190,6 +34,135 @@
                         </button>
                     </a>
                 </div>
+            </div>
+            <div class="flex justify-center w-full mb-5">
+                <div
+                    class="relative overflow-x-auto shadow-md sm:rounded-lg w-lg lg:w-3xl"
+                >
+                    <table
+                        class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
+                    >
+                        <thead
+                            class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
+                        >
+                            <tr>
+                                <th scope="col" class="px-6 py-3">Den</th>
+                                <th scope="col" class="px-1 py-3">
+                                    Stream včas?
+                                </th>
+                                <th scope="col" class="px-6 py-3">Start</th>
+                                <th scope="col" class="px-6 py-3">Konec</th>
+                                <th scope="col" class="px-6 py-3">Počet km</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr
+                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+                            >
+                                <th
+                                    scope="row"
+                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                                >
+                                    Den 1
+                                </th>
+                                <td class="px-1 py-4">❌</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">5 km</td>
+                            </tr>
+                            <tr
+                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+                            >
+                                <th
+                                    scope="row"
+                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                                >
+                                    Den 2
+                                </th>
+                                <td class="px-1 py-4">❌</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">6 km</td>
+                            </tr>
+                            <tr
+                                class="bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-600"
+                            >
+                                <th
+                                    scope="row"
+                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                                >
+                                    Den 3
+                                </th>
+                                <td class="px-1 py-4">❌</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">7 km</td>
+                            </tr>
+                            <tr
+                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+                            >
+                                <th
+                                    scope="row"
+                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                                >
+                                    Den 4
+                                </th>
+                                <td class="px-1 py-4">❌</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">5 km</td>
+                            </tr>
+                            <tr
+                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+                            >
+                                <th
+                                    scope="row"
+                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                                >
+                                    Den 5
+                                </th>
+                                <td class="px-1 py-4">❌</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">5 km</td>
+                            </tr>
+                            <tr
+                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+                            >
+                                <th
+                                    scope="row"
+                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                                >
+                                    Den 6
+                                </th>
+                                <td class="px-1 py-4">❌</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">5 km</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="flex flex-col md:flex-row justify-center w-full gap-4">
+                <iframe
+                    src="https://clips.twitch.tv/embed?clip=ZanyBlueLorisBleedPurple-x6dTPRFibfagNYUX&parent=localhost"
+                    height="378"
+                    width="620"
+                    allowfullscreen
+                    loading="lazy"
+                    class="md:w-[620px] h-[378px]"
+                >
+                </iframe>
+                <iframe
+                    src="https://clips.twitch.tv/embed?clip=ZanyBlueLorisBleedPurple-x6dTPRFibfagNYUX&parent=localhost"
+                    height="378"
+                    width="620"
+                    allowfullscreen
+                    loading="lazy"
+                    class="md:w-[620px] h-[378px]"
+                >
+                </iframe>
             </div>
         </div>
         <script type="module" src="./src/main.js"></script>
