--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
             <div class="flex flex-col md:flex-row justify-center w-full gap-4">
                 <iframe
-                    src="https://clips.twitch.tv/embed?clip=ZanyBlueLorisBleedPurple-x6dTPRFibfagNYUX&parent=localhost"
+                    src="https://www.twitch.tv/kapesnik69/clip/ZanyBlueLorisBleedPurple-x6dTPRFibfagNYUX?filter=clips&range=7d&sort=time"
                     height="378"
                     width="620"
                     allowfullscreen
@@ -155,7 +155,7 @@
                 >
                 </iframe>
                 <iframe
-                    src="https://clips.twitch.tv/embed?clip=ZanyBlueLorisBleedPurple-x6dTPRFibfagNYUX&parent=localhost"
+                    src="https://www.twitch.tv/kapesnik69/clip/ZanyBlueLorisBleedPurple-x6dTPRFibfagNYUX?filter=clips&range=7d&sort=time"
                     height="378"
                     width="620"
                     allowfullscreen
